--- a/public/swagger/css/screen.css
+++ b/public/swagger/css/screen.css
@@ -1280,3 +1280,32 @@
   text-align: center;
   padding-top: 10px;
 }
+
+
+/*** OVERRIDES ***/
+.swagger-section #header{
+    background-color:#fff;
+}
+.swagger-ui-wrap img{
+    width:100px;
+}
+
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.post div.heading,
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.get div.heading{
+    border:none;
+}
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.post div.heading{
+    background-color: #D8F0EC;
+}
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.post div.heading h3 span.http_method a{
+    background-color: #4fb3a1;
+}
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.get div.heading h3 span.http_method a{
+    background-color: #4C8CCA;
+}
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.post div.heading ul.options li a{
+    color: #4fb3a1;
+}
+.swagger-section .swagger-ui-wrap ul#resources li.resource ul.endpoints li.endpoint ul.operations li.operation.get div.heading ul.options li a{
+    color:#4C8CCA;
+}
